--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -9,9 +9,9 @@
     <title>Contato</title>
 </head>
 <body>
-    <header>
+    <header class="mobile">
         <a href="../index.html"><div class="bar1"></div><div class="bar2"></div></a>
-        <h1>Contato</h1>
+        <h1>Curriculo</h1>
     </header>
     <main>
         <div class="contato">
