--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mobile.css">
+    <link rel="shortcut icon" href="./imagens/mini-assinatura.png" type="image/x-icon">
     <title>Portfólio EdsonCTM</title>
 </head>
 <body>
     <div class="mobile intropage">
         <div class="menuBarPrinc">
-            <img src="" alt="" class="imgIntroPage">
+            <img src="./imagens/assinatura.png" alt="" class="imgIntroPage">
             
             <div class="menuNav">
                 <a href="./Curriculo/curriculo.html">Curriculo</a>
