--- a/Projetos/Troca-cor/trocacor.html
+++ b/Projetos/Troca-cor/trocacor.html
@@ -9,8 +9,18 @@
     <title>Animações em CSS/JS</title>
 </head>
 <body>
-    <header>
-        <a href="../projetos.html"><div class="bar1"></div><div class="bar2"></div></a>
+    <header class="mobile">
+        <a href="../Projetos.html"><div class="bar1"></div><div class="bar2"></div></a>
+        <h1>Troca-Cor</h1>
+    </header>
+    <header class="desktop">
+        <div class="menuNav">
+            <a href="../../index.html">Home</a>
+            <a href="../../Curriculo/curriculo.html">Curriculo</a>
+            <a href="../../Sobre/sobre.html">Sobre</a>
+            <a href="../projetos.html">Projetos</a>
+            <a href="#contatos">Contato</a>
+        </div>
     </header>
     <main>
         <div id="wall">
@@ -18,6 +28,15 @@
             <input type="button" value="Mudar cor" id="btn">
         </div>
     </main>
+
+    <footer class="desktop" id="contatos">
+        <div class="contato">
+            <a href="https://github.com/Edsonctm" target="_blank" class="icon"><img src="../../imagens/github-icon.png" alt="">Github</a>
+            <a href="https://www.instagram.com/edsonctm/" target="_blank" class="icon"><img src="../../imagens/instagram-icon.png" alt="">Instagram</a>
+            <a href="https://www.linkedin.com/in/edsontorres/" target="_blank" class="icon"><img src="../../imagens/linkedin-icon.png" alt="">LinkedIn</a>
+            <a href="https://wa.me/5527981679958" target="_blank" class="icon"><img src="../../imagens/whatsapp-icon.png" alt="">Whatsapp</a>
+       </div>
+    </footer>
     <script src="trocacor.js"></script>
 </body>
 </html>
