--- a/Sobre/sobre.html
+++ b/Sobre/sobre.html
@@ -9,9 +9,18 @@
     <title>Sobre</title>
 </head>
 <body>
-    <header>
+    <header class="mobile">
         <a href="../index.html"><div class="bar1"></div><div class="bar2"></div></a>
         <h1>Sobre</h1>
+    </header>
+    <header class="desktop">
+        <div class="menuNav">
+            <a href="../index.html">Home</a>
+            <a href="../Curriculo/curriculo.html">Curriculo</a>
+            <a href="#">Sobre</a>
+            <a href="../Projetos/projetos.html">Projetos</a>
+            <a href="#contatos">Contato</a>
+        </div>
     </header>
     <main>
         <details>
@@ -85,5 +94,14 @@
             </div>       
         </details>
     </main>
+
+    <footer class="desktop" id="contatos">
+        <div class="contato">
+            <a href="https://github.com/Edsonctm" target="_blank" class="icon"><img src="../imagens/github-icon.png" alt="">Github</a>
+            <a href="https://www.instagram.com/edsonctm/" target="_blank" class="icon"><img src="../imagens/instagram-icon.png" alt="">Instagram</a>
+            <a href="https://www.linkedin.com/in/edsontorres/" target="_blank" class="icon"><img src="../imagens/linkedin-icon.png" alt="">LinkedIn</a>
+            <a href="https://wa.me/5527981679958" target="_blank" class="icon"><img src="../imagens/whatsapp-icon.png" alt="">Whatsapp</a>
+       </div>
+    </footer>
 </body>
 </html>
