--- a/Contato/contato.html
+++ b/Contato/contato.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../imagens/mini-assinatura.png" type="image/x-icon">
     <link rel="stylesheet" href="../Curriculo/Base.css">
     <link rel="stylesheet" href="contato.css">
     <title>Contato</title>
@@ -11,7 +12,16 @@
 <body>
     <header class="mobile">
         <a href="../index.html"><div class="bar1"></div><div class="bar2"></div></a>
-        <h1>Curriculo</h1>
+        <h1>Contato</h1>
+    </header>
+    <header class="desktop">
+        <div class="menuNav">
+            <a href="../index.html">Home</a>
+            <a href="../Curriculo/curriculo.html">Curriculo</a>
+            <a href="../Sobre/sobre.html">Sobre</a>
+            <a href="../Projetos/projetos.html">Projetos</a>
+            <a href="#">Contato</a>
+        </div>
     </header>
     <main>
         <div class="contato">
