--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="mobile intropage">
         <div class="menuBarPrinc">
-            <img src="./imagens/assinatura.png" alt="" class="imgIntroPage">
+            <img src="./imagens/assinatura2.png" alt="" class="imgIntroPage">
             
             <div class="menuNav">
                 <a href="./Curriculo/curriculo.html">Curriculo</a>
