--- a/Projetos/Jogo-da-velha/jogo-da-velha.html
+++ b/Projetos/Jogo-da-velha/jogo-da-velha.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../../imagens/mini-assinatura.png" type="image/x-icon">
     <link rel="stylesheet" href="../../Curriculo/Base.css">
     <link rel="stylesheet" href="velha.css">
     <title>Jogo da Velha</title>
@@ -11,7 +12,7 @@
 <body>
     <header class="mobile">
         <a href="../Projetos.html"><div class="bar1"></div><div class="bar2"></div></a>
-        <h1>Carrossel</h1>
+        <h1>Jogo da Velha</h1>
     </header>
     <header class="desktop">
         <div class="menuNav">
