Alteração link de retorno dos projetos.
Utilização de Javascript para fazer reotrno dos projetos abertos, solucionando o erro que estava dando com lincagem HTML Casessentive.

--- a/Carrossel-avaliacao/carrossel.html
+++ b/Carrossel-avaliacao/carrossel.html
@@ -10,7 +10,7 @@
     <title>Carrossel de avaliações</title>
 </head>
     <header class="mobile">
-        <a href="https://edsonctm.github.io/Portfolio-2/Projetos/projetos.html"><div class="bar1"></div><div class="bar2"></div></a>
+        <a href="javascript:history.go(-1)"><div class="bar1"></div><div class="bar2"></div></a>
         <h1>Carrossel</h1>
     </header>
     <header class="desktop">
