--- a/Jogo-da-velha/jogo-da-velha.html
+++ b/Jogo-da-velha/jogo-da-velha.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="mobile">
-        <a href="https://edsonctm.github.io/Portfolio-2/Projetos/projetos.html"><div class="bar1"></div><div class="bar2"></div></a>
+        <a href="javascript:history.go(-1)"><div class="bar1"></div><div class="bar2"></div></a>
         <h1>Jogo da Velha</h1>
     </header>
     <header class="desktop">
