Atualização do Curriculo.

--- a/Curriculo/curriculo.html
+++ b/Curriculo/curriculo.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="Base.css">
     <link rel="shortcut icon" href="../imagens/mini-assinatura.png" type="image/x-icon">
     <link rel="stylesheet" href="curriculo.css">
+    <link rel="stylesheet" type="text/css" href="print.css" media="print" />
     <title>Curriculo</title>
 </head>
 <body>
@@ -36,10 +37,10 @@
 
             <h2>Perfil Profissional</h2>
             <hr>
-            <p>Me chamo Edson, sou estudante de Análise e Desenvolvimento de Sistemas e um futuro programador Front-End. Atualmente já possuo bons conhecimentos de HTML5 e CSS3, além de estar na parte intermediária do meu curso de JavaScript, tendo feito alguns pequenos projetos que podem ser vistos na minha página do <a href="https://github.com/Edsonctm" target="_blank">Github</a>. Sou graduado em Gestão Comercial e possuo bastante experiência de trabalho nas áreas administrativas.</p> <br> <br>
+            <p>Sou estudante de Análise e Desenvolvimento de Sistemas e um futuro programador Front-End. Atualmente já possuo bons conhecimentos de HTML5, CSS3, JavaScript, ReactJS e Angular, tendo feito alguns pequenos projetos que podem ser vistos na minha página do <a href="https://github.com/Edsonctm" target="_blank">Github</a>. Sou graduado em Gestão Comercial e possuo bastante experiência de trabalho nas áreas administrativas.</p> <br> <br>
 
             <h3>Objetivos</h3>
-            <p>Meu objetivo atual é iniciar na área de desenvolvimento, estagiando ou atuando como desenvolvedor júnior na parte de Front-End, principalmente. Quero alavancar o máximo possível meus conhecimentos na área de programação, utilizando sempre a tecnologia como resolvedor de problemas.</p> <br> <br>
+            <p>Meu objetivo atual é iniciar na área de desenvolvimento, estagiando ou atuando como desenvolvedor júnior na parte de Front-end, principalmente. Quero alavancar o máximo possível meus conhecimentos na área de programação, utilizando sempre a tecnologia como resolvedor de problemas.</p> <br> <br>
 
             <h2>Formação</h2>
             <hr>
@@ -81,19 +82,53 @@
                 <hr>
                 <h3>Inglês</h3>
                 <p>Nível de Conhecimento: Avançado</p> <br> <br>
-                <h3>Ephol</h3>
+                <h3>Espanhol</h3>
                 <p>Nível de Conhecimento: Básico</p> <br> <br>
                 
                 <h2>Habilidades e Ferramentas</h2>
                 <hr>
-                <p>CSS3 e HTML5, JavaScript, Gimp, Word, Excel Avançado, Internet, Lógica de Programação, Powerpoint.</p> <br> <br>
+                <p>HTML5, CSS3, JavaScript, PHP, ReactJS, Angular, Gimp, Pacote Office.</p> <br> <br>
 
                 <h2>Certificações</h2>
                 <hr>
-                <p>
-                    <a href="https://www.freecodecamp.org/certification/Edsonctm/responsive-web-design" target="_blank">Responsive Web Design</a> <br>
-                    Março de 2022 - Não expira
-                </p> <br> <br>
+                <div class="certificados">
+                    <p>
+                        <a href="https://www.freecodecamp.org/certification/Edsonctm/responsive-web-design" target="_blank">Responsive Web Design</a> <br>
+                        FreeCodeCamp <br>
+                        Março de 2022 - Não expira
+                    </p>
+                    <p>
+                        <a href="https://www.devmedia.com.br/certificado/tecnologia/programacao/edson-cristian-torres-marcolongo" target="_blank">Programação</a> <br>
+                        DevMedia <br>
+                        Maio de 2022 - Não expira
+                    </p>
+                    <p>
+                        <a href="https://www.devmedia.com.br/certificado/tecnologia/react/edson-cristian-torres-marcolongo" target="_blank">React JS</a> <br>
+                        DevMedia <br>
+                        Junho de 2022 - Não expira
+                    </p>
+                    <p>
+                        <a href="https://www.devmedia.com.br/certificado/tecnologia/css/edson-cristian-torres-marcolongo" target="_blank">CSS</a> <br>
+                        DevMedia <br>
+                        Junho de 2022 - Não expira
+                    </p>
+                    <p>
+                        <a href="https://www.devmedia.com.br/certificado/tecnologia/algoritmo/edson-cristian-torres-marcolongo" target="_blank">Algoritmo</a> <br>
+                        DevMedia <br>
+                        Junho de 2022 - Não expira
+                    </p>
+                    <p>
+                        <a href="https://www.devmedia.com.br/certificado/tecnologia/javascript/edson-cristian-torres-marcolongo" target="_blank">JavaScript</a> <br>
+                        DevMedia <br>
+                        Junho de 2022 - Não expira
+                    </p>
+                    <p>
+                        <a href="https://www.devmedia.com.br/certificado/tecnologia/html/edson-cristian-torres-marcolongo" target="_blank">HTML</a> <br>
+                        DevMedia <br>
+                        Junho de 2022 - Não expira
+                    </p>
+                </div>
+                
 
                 <h2>Premiação</h2>
                 <hr>
